cmake_minimum_required(VERSION 3.13)
project(lem_in C)

set(CMAKE_C_STANDARD 11)

include_directories(includes)
include_directories(libft)
include_directories(libft/includes)
include_directories(libft/libft)

add_executable(lem_in
        includes/lem_in.h
        includes/libft.h
        includes/printf.h
        libft/includes/libft.h
        libft/includes/printf.h
        libft/libft/ft_atoi.c
        libft/libft/ft_bzero.c
        libft/libft/ft_insertion.c
        libft/libft/ft_isalnum.c
        libft/libft/ft_isalpha.c
        libft/libft/ft_isascii.c
        libft/libft/ft_isdigit.c
        libft/libft/ft_isprint.c
        libft/libft/ft_itoa.c
        libft/libft/ft_lstadd.c
        libft/libft/ft_lstdel.c
        libft/libft/ft_lstdelone.c
        libft/libft/ft_lstiter.c
        libft/libft/ft_lstmap.c
        libft/libft/ft_lstnew.c
        libft/libft/ft_memalloc.c
        libft/libft/ft_memccpy.c
        libft/libft/ft_memchr.c
        libft/libft/ft_memcmp.c
        libft/libft/ft_memcpy.c
        libft/libft/ft_memdel.c
        libft/libft/ft_memmove.c
        libft/libft/ft_memset.c
        libft/libft/ft_pow.c
        libft/libft/ft_print_bits.c
        libft/libft/ft_print_memory.c
        libft/libft/ft_putchar.c
        libft/libft/ft_putchar_fd.c
        libft/libft/ft_putendl.c
        libft/libft/ft_putendl_fd.c
        libft/libft/ft_putnbr.c
        libft/libft/ft_putnbr_fd.c
        libft/libft/ft_putstr.c
        libft/libft/ft_putstr_fd.c
        libft/libft/ft_reversebits.c
        libft/libft/ft_strcat.c
        libft/libft/ft_strchr.c
        libft/libft/ft_strclr.c
        libft/libft/ft_strcmp.c
        libft/libft/ft_strcpy.c
        libft/libft/ft_strdel.c
        libft/libft/ft_strdup.c
        libft/libft/ft_strequ.c
        libft/libft/ft_striter.c
        libft/libft/ft_striteri.c
        libft/libft/ft_strjoin.c
        libft/libft/ft_strlcat.c
        libft/libft/ft_strlen.c
        libft/libft/ft_strmap.c
        libft/libft/ft_strmapi.c
        libft/libft/ft_strncat.c
        libft/libft/ft_strncmp.c
        libft/libft/ft_strncpy.c
        libft/libft/ft_strnequ.c
        libft/libft/ft_strnew.c
        libft/libft/ft_strnstr.c
        libft/libft/ft_strrchr.c
        libft/libft/ft_strsplit.c
        libft/libft/ft_strstr.c
        libft/libft/ft_strsub.c
        libft/libft/ft_strtrim.c
        libft/libft/ft_tolower.c
        libft/libft/ft_toupper.c
        libft/libft/get_next_line.c
        libft/libft/get_next_line.h
        libft/libft/libft.h
        libft/add_func.c
        libft/formating.c
        libft/formating_2.c
        libft/ft_itoa_int128.c
        libft/ft_printf.c
        libft/itoa_base_long.c
        libft/itoa_base_ull.c
        libft/print_float.c
        libft/print_float_add.c
        libft/print_int.c
        libft/printf.h
        libft/service_functions.c
        libft/service_functions2.c
        libft/stack_func.c
        libft/stack_func_2.c
        algorithm.c
        extra.c
        lists_creation.c
        main.c
        memory_cleaning.c
        moving_ants.c
        queue_functions.c
        validation.c)
